Closed Bug 371182 Opened 17 years ago Closed 17 years ago

antialiasing problems at bevels of border-collapsed borders

Categories

(Core :: Graphics, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9alpha3

People

(Reporter: dbaron, Assigned: dbaron)

References

Details

(Keywords: css2, testcase, Whiteboard: [patch])

Attachments

(2 files)

Attached file testcase
The borders of border-collapsed tables show the border drawing problems that were fixed elsewhere by the patch in bug 328241 comment 25.

Steps to reproduce: load attachment
Expected results: solid black border around the edge
Actual results: lighter colors visible along the bevels
Flags: blocking1.9?
Assignee: nobody → vladimir
Depends on: 368247
Flags: blocking1.9? → blocking1.9+
Attached patch patchSplinter Review
This fixes the bug, and also fixes a warning by changing a float to an int (followup to units rewrite).  If this conflicts with your border rewrite, I could hold off, or skip the PaintBorder changes.
Assignee: vladimir → dbaron
Status: NEW → ASSIGNED
Attachment #256144 - Flags: review?(vladimir)
Priority: -- → P2
Whiteboard: [patch]
Target Milestone: --- → mozilla1.9alpha3
Comment on attachment 256144 [details] [diff] [review]
patch

Nope, go for it; my stuff just rewrites that function en-masse (and just #includes another file and #if 0's out the others so I don't get conflicts, for now), so it's no problem.
Attachment #256144 - Flags: review?(vladimir) → review+
Checked in to trunk.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
I tried to make a reftest for this, but I couldn't get a border-collapse table with a border to line up with either a normal table or plain div with a border.  Adding borders apparently moves different things in different directions :(
Flags: in-testsuite?
Verified with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008050704 Minefield/3.0pre.
Status: RESOLVED → VERIFIED
Depends on: 521746
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: