Disable antialiasing for border-collapse borders too, and fix a build warning by not passing what is now an integer through a float parameter.  b=371182  r=vlad