layout/base/nsCSSRendering.h
@@ -207,7 +207,7 @@ public:
                                      nscolor                  aBorderColor,
                                      const nsStyleBackground* aBGColor,
                                      const nsRect&            aBorderRect,
-                                     float                    aPixelsToTwips,
+                                     PRInt32                  aAppUnitsPerCSSPixel,
                                      PRUint8                  aStartBevelSide = 0,
                                      nscoord                  aStartBevelOffset = 0,
                                      PRUint8                  aEndBevelSide = 0,
